Fixed navigation alignmentt, updated home page twig, fixed nav responsively (overlay)

--- a/css/fullscreen-nav.less
+++ b/css/fullscreen-nav.less
@@ -13,16 +13,39 @@
 	align-items: center;
 	height: 100%;
 	width: 100%;
-	// max-width: 960px;
-	// margin: 5em auto;
+	@media @tablet {
+		-webkit-flex-align: inherit;
+		-ms-flex-align: inherit;
+		-webkit-align-items: inherit;
+		align-items: inherit;
+	}
 	overflow: auto;
 	.extendednavigation {
 		width: 100%;
 		max-width: 60%;
 		margin: 5em auto;
+		@media @mobile {
+			margin: 3em auto;
+		}
+	}
+	// Tablet Overrides
+	ul {
+		@media @tablet {
+			display: block;
+			padding-top: 0;
+			li {
+				padding: 0;
+			}
+		}
 	}
 	ul li {
 		width: 100%;
+		@media @tablet {
+			border-bottom: 0;
+		}
+		@media @mobile {
+			padding: 10px 0;
+		}
 		&.folder {
 			margin-right: 0;
 			&:after {
@@ -37,6 +60,16 @@
 					right: -10px;
 					top: -1px;
 				}
+				@media @mobile {
+					font-size: bkscale(@font-swatch6-font-size,0.8);
+					line-height: bkscale(@font-swatch6-line-height,0.5);
+				}
+			}
+		}
+		a {
+			@media @mobile {
+				font-size: bkscale(@font-swatch6-font-size,0.8);
+				line-height: bkscale(@font-swatch6-line-height,0.5);
 			}
 		}
 		// Dropdown Menu
@@ -45,6 +78,7 @@
 			transition: all .2s ease-in-out;
 			ul {
 				width: 100%;
+				margin-top: 0;
 				background-color: @color-swatch2;
 				border: 1px solid hsla(hue(@color-swatch1), saturation(@color-swatch1), lightness(@color-swatch1), 0.4); 
 				li .text:after {
@@ -84,10 +118,15 @@
 	text-indent: 200%;
 	color: transparent;
 	outline: none;
-	z-index: 100;
+	z-index: 9999;
 	cursor: pointer;
 	&:hover {
 		border-color: @color-swatch1;
+	}
+	@media @tablet {
+		width: 50px;
+		height: 50px;
+		background-size: 18px;
 	}
 }
 
